[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "ncconvert"
dynamic = ["dependencies", "version"]
authors = [
  { name="tsdat", email="tsdat@pnnl.gov" },
]
description = "Convert netCDF to other formats."
readme = "README.md"
requires-python = ">=3.8"
keywords = ["netCDF", "cdf", "nc"]
license = {text = "BSD 3-Clause License"}
classifiers = [
    "Programming Language :: Python :: 3",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ncconvert = ["py.typed"]

[tool.setuptools_scm]
local_scheme = "no-local-version"
write_to = "src/ncconvert/_version.py"

[tool.setuptools.dynamic]
dependencies= {file = "requirements.txt"}
version = {attr = "ncconvert.__version__"}
