[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "ncconvert"
dynamic = ["version"]
authors = [
  { name="tsdat", email="tsdat@pnnl.gov" },
]
description = "Convert netCDF to other formats."
readme = "README.md"
requires-python = ">=3.8"
keywords = ["netCDF", "cdf", "nc"]
license = {text = "BSD 3-Clause License"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
  "xarray[io]",
  "pandas[hdf5, parquet, feather, spss, excel]",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "coverage",
  "build",
  "black",
  "ruff",
]

cli = [
  "typer",
  "rich",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ncconvert = ["py.typed"]

[tool.setuptools_scm]
local_scheme = "no-local-version"
write_to = "src/ncconvert/_version.py"

[tool.setuptools.dynamic]
version = {attr = "ncconvert.__version__"}
